--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<div id="app"></div>
+	<script type="text/javascript" src="//d1l4stvdmqmdzl.cloudfront.net/4.0.2/mongoose.js"></script>
 	<script type="text/javascript" src='bundle.js'></script>
 </body>
 </html>
